fix overflow css

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,4 +4,6 @@
 
 #__next {
     @apply bg-background-dark text-surface;
+    /* iOS Safari で右側に余白ができてしまう対策 */
+    overflow: hidden;
 }
